--- a/children.html
+++ b/children.html
@@ -12,7 +12,7 @@
       for (let i = 0; i < document.body.childNodes.length; i++) {
         alert(document.body.childNodes[i]);
       }
-      alert(elem.childNodes[0] === elem.firstChild);
+      alert(document.body.childNodes[0] === document.body.firstChild);
     </script>
   </body>
 </html>
