comparision between childs

--- a/children.html
+++ b/children.html
@@ -13,6 +13,10 @@
         alert(document.body.childNodes[i]);
       }
       alert(document.body.childNodes[0] === document.body.firstChild);
+
+      for (let node of document.body.childNodes) {
+        alert(node);
+      }
     </script>
   </body>
 </html>
